WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92107
[WTR][EFL] Multiple mouse clicks are not emitted in EventSenderProxyEfl
https://bugs.webkit.org/show_bug.cgi?id=92107
Summary
[WTR][EFL] Multiple mouse clicks are not emitted in EventSenderProxyEfl
Alexander Shalamov
Reported
2012-07-24 05:54:05 PDT
Multiple mouse clicks are not emitted in EventSenderProxyEfl, therefore, layout tests that use leapForward / mouseDown methods, are failing
Attachments
Patch
(2.38 KB, patch)
2012-07-24 06:00 PDT
,
Alexander Shalamov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Shalamov
Comment 1
2012-07-24 06:00:44 PDT
Created
attachment 154034
[details]
Patch Fix for multiple mouse click events.
Chris Dumez
Comment 2
2012-07-24 06:11:02 PDT
Comment on
attachment 154034
[details]
Patch LGTM. Thanks.
Chris Dumez
Comment 3
2012-07-24 11:20:24 PDT
While the patch will compile if landed, the functionality will not work unless the dependency (
Bug 92094
) lands as well.
WebKit Review Bot
Comment 4
2012-07-24 12:33:11 PDT
Comment on
attachment 154034
[details]
Patch Clearing flags on attachment: 154034 Committed
r123506
: <
http://trac.webkit.org/changeset/123506
>
WebKit Review Bot
Comment 5
2012-07-24 12:33:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug