[WTR][EFL] Multiple mouse clicks are not emitted in EventSenderProxyEfl https://bugs.webkit.org/show_bug.cgi?id=92107

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-07-24
Reviewed by Kenneth Rohde Christiansen.

Fixes mouse click events in EventSenderProxyEfl.

* WebKitTestRunner/efl/EventSenderProxyEfl.cpp:
(WTR::dispatchMouseDownEvent):
(WTR::EventSenderProxy::dispatchEvent):

Canonical link: https://commits.webkit.org/109955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123506 268f45cc-cd09-0410-ab3c-d52691b4dbfc